fix wrapping on mobile

--- a/content/assets/chatbot-comparison/chatbot.css
+++ b/content/assets/chatbot-comparison/chatbot.css
@@ -86,6 +86,10 @@ blockquote {
     overflow: auto;
 }
 
+.blockquote code {
+    word-wrap: break-word;
+}
+
 .human details {
     background: none;
     color: white;
